[package]
name = "naptime"
version = "0.1.0"
authors = ["cyp <cyplp@free.fr>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
# reqwest = { version = "0.11.10", feature = ["blocking", "json"] }
reqwest = "0.9.19"
regex = "1"
color-backtrace = { version = "0.2" }
clap = { version = "3.1.12", features = ["derive"] }
